Fixed text-wrapping problem on landing-page for Firefox

--- a/assets/scss/stylesheet.scss
+++ b/assets/scss/stylesheet.scss
@@ -496,6 +496,12 @@ footer.mobile-footer {
 }
 // End Logo
 
+@-moz-document url-prefix() {
+  .text-date-location {
+    letter-spacing: 1.5px;
+  }
+}
+
 //// END TEXT CSS
 
 
